Add custom HTTP server response files Also fixed URLDecoder intellisense warning